src/test/ui/for/for-loop-refutable-pattern-error-message.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0005]: refutable pattern in `for` loop binding: `&std::i32::MIN..=0i32` not covered
=======
error[E0005]: refutable pattern in `for` loop binding: `&std::i32::MIN..=0i32` and `&2i32..=std::i32::MAX` not covered
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/for-loop-refutable-pattern-error-message.rs:2:9
   |
LL |     for &1 in [1].iter() {}
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |         ^^ pattern `&std::i32::MIN..=0i32` not covered
=======
   |         ^^ patterns `&std::i32::MIN..=0i32` and `&2i32..=std::i32::MAX` not covered
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
